welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:10: error: not found: value avancer
while (vuBiscuit()==false) {avancer()}
                            ^Program:10: error: type mismatch;
 found   : Unit
 required: Boolean
while (vuBiscuit()==false) {avancer()}
^